Enforce sort order of data version for upgraders (#3191)
* Enforce sort order of data version for upgraders with immutable, sorted map